tests/fail/empty_path.stderr
error: Invalid decorator path
 --> tests/fail/empty_path.rs:3:1
  |
3 | #[decorate()]
  | ^^^^^^^^^^^^^
  |
  = note: this error originates in the attribute macro `decorate` (in Nightly builds, run with -Z macro-backtrace for more info)

error: Expected a function path, e.g., #[decorate(my_decorator)]
 --> tests/fail/empty_path.rs:3:1
  |
3 | #[decorate()]
  | ^^^^^^^^^^^^^
  |
  = note: this error originates in the attribute macro `decorate` (in Nightly builds, run with -Z macro-backtrace for more info)
